my-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: argocd
  annotations:
    argocd-image-updater.argoproj.io/allow-tags: "*"
    argocd-image-updater.argoproj.io/image-list: "mysql"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
            - name: initdb
              mountPath: /docker-entrypoint-initdb.d
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "700m"
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc
        - name: initdb
          configMap:
            name: mysql-initdb

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  annotations:
    argocd-image-updater.argoproj.io/allow-tags: "*"
    argocd-image-updater.argoproj.io/image-list: "ghofraneferchichi/configserv"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: ghofraneferchichi/configserv:239
          ports:
            - containerPort: 9012
          resources:
            requests:
              memory: "200Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "200m"
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: config-server
spec:
  selector:
    app: config-server
  ports:
    - protocol: TCP
      port: 9012
      targetPort: 9012
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery
  annotations:
    argocd-image-updater.argoproj.io/allow-tags: "*"
    argocd-image-updater.argoproj.io/image-list: "ghofraneferchichi/discback"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery
  template:
    metadata:
      labels:
        app: discovery
    spec:
      containers:
        - name: discovery
          image: ghofraneferchichi/discback:253
          ports:
            - containerPort: 8761
          resources:
            requests:
              memory: "200Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "200m"
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: discovery
spec:
  selector:
    app: discovery
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  annotations:
    argocd-image-updater.argoproj.io/allow-tags: "*"
    argocd-image-updater.argoproj.io/image-list: "ghofraneferchichi/gatewayback"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: ghofraneferchichi/gatewayback:248
          ports:
            - containerPort: 8007
          resources:
            requests:
              memory: "200Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "200m"
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 8007
      targetPort: 8007
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-microservice
  annotations:
    argocd-image-updater.argoproj.io/allow-tags: "*"
    argocd-image-updater.argoproj.io/image-list: "ghofraneferchichi/microuserr"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-microservice
  template:
    metadata:
      labels:
        app: user-microservice
    spec:
      containers:
        - name: user-microservice
          image: ghofraneferchichi/microuserr:261
          ports:
            - containerPort: 9010
          resources:
            requests:
              memory: "200Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "200m"
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: user-microservice
spec:
  selector:
    app: user-microservice
  ports:
    - protocol: TCP
      port: 9010
      targetPort: 9010
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcommandes
  annotations:
    argocd-image-updater.argoproj.io/allow-tags: "*"
    argocd-image-updater.argoproj.io/image-list: "ghofraneferchichi/microcommm"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcommandes
  template:
    metadata:
      labels:
        app: mcommandes
    spec:
      containers:
        - name: mcommandes
          image: ghofraneferchichi/microcommm:257
          ports:
            - containerPort: 9009
          resources:
            requests:
              memory: "200Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "200m"
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: mcommandes
spec:
  selector:
    app: mcommandes
  ports:
    - protocol: TCP
      port: 9009
      targetPort: 9009
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mpanier
  annotations:
    argocd-image-updater.argoproj.io/allow-tags: "*"
    argocd-image-updater.argoproj.io/image-list: "ghofraneferchichi/micropannc"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mpanier
  template:
    metadata:
      labels:
        app: mpanier
    spec:
      containers:
        - name: mpanier
          image: ghofraneferchichi/micropannc:255
          ports:
            - containerPort: 9005
          resources:
            requests:
              memory: "200Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "200m"
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: mpanier
spec:
  selector:
    app: mpanier
  ports:
    - protocol: TCP
      port: 9005
      targetPort: 9005
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mproduits
  annotations:
    argocd-image-updater.argoproj.io/allow-tags: "*"
    argocd-image-updater.argoproj.io/image-list: "ghofraneferchichi/prodback"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mproduits
  template:
    metadata:
      labels:
        app: mproduits
    spec:
      containers:
        - name: mproduits
          image: ghofraneferchichi/prodback:192
          ports:
            - containerPort: 9004
          resources:
            requests:
              memory: "400Mi"
              cpu: "200m"
            limits:
              memory: "600Mi"
              cpu: "300m"
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: mproduits
spec:
  selector:
    app: mproduits
  ports:
    - protocol: TCP
      port: 9004
      targetPort: 9004
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  annotations:
    argocd-image-updater.argoproj.io/allow-tags: "*"
    argocd-image-updater.argoproj.io/image-list: "ghofraneferchichi/myfrontimage:1"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghofraneferchichi/myfrontimage:1
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "200Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "200m"
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
