my-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: config-server
spec:
  selector:
    app: config-server
  ports:
    - protocol: TCP
      port: 9012
      targetPort: 9012
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: discovery
spec:
  selector:
    app: discovery
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 8007
      targetPort: 8007
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: user-microservice
spec:
  selector:
    app: user-microservice
  ports:
    - protocol: TCP
      port: 9010
      targetPort: 9010
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: commande-microservice
spec:
  selector:
    app: commande-microservice
  ports:
    - protocol: TCP
      port: 9009
      targetPort: 9009
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: panier-microservice
spec:
  selector:
    app: panier-microservice
  ports:
    - protocol: TCP
      port: 9005
      targetPort: 9005
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: produits-microservice
spec:
  selector:
    app: produits-microservice
  ports:
    - protocol: TCP
      port: 9004
      targetPort: 9004
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
