my-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: mydomain.com
      http:
        paths:
          - path: /mysql
            pathType: Prefix
            backend:
              service:
                name: mysql
                port:
                  number: 3306
          - path: /config-server
            pathType: Prefix
            backend:
              service:
                name: config-server
                port:
                  number: 9012
          - path: /discovery
            pathType: Prefix
            backend:
              service:
                name: discovery
                port:
                  number: 8761
          - path: /gateway
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8007
          - path: /user-microservice
            pathType: Prefix
            backend:
              service:
                name: user-microservice
                port:
                  number: 9010
          - path: /commande-microservice
            pathType: Prefix
            backend:
              service:
                name: commande-microservice
                port:
                  number: 9009
          - path: /panier-microservice
            pathType: Prefix
            backend:
              service:
                name: panier-microservice
                port:
                  number: 9005
          - path: /produits-microservice
            pathType: Prefix
            backend:
              service:
                name: produits-microservice
                port:
                  number: 9004
          - path: /frontend
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8077
